# opennote

./: .gitignore  Cargo.toml  Dockerfile  NOTICE.md  README.md  build_and_deploy.sh  compose.yaml
backend/: .gitignore  Cargo.toml  changes_to_frontend.md  config.docker.json
backend/crates/local_embedder/: Cargo.toml
backend/crates/local_embedder/src/: embedder.rs  lib.rs  local_embedder.rs
backend/crates/local_vector_database/: Cargo.toml
backend/crates/local_vector_database/src/: lib.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260309_073725_record_last_time_used_vector_database.rs  m20260322_065952_create_tables.rs
backend/crates/model_downloader/: Cargo.toml
backend/crates/model_downloader/src/: downloader.rs  hf_downloader.rs  lib.rs  local_model.rs
backend/migrations/: 20260215152840_migrate_metadata_storage.sql  20260217000000_add_users_table.sql
backend/scripts/: generate_entity.sh  migrate.sh
backend/src/: app_state.rs  callbacks.rs  checkups.rs  constants.rs  database.rs  embedder.rs  handler_operations.rs  handshake.rs  initialization.rs  main.rs  metadata_storage.rs  routes.rs  tasks_scheduler.rs  traits.rs  utilities.rs
backend/src/api_models/: backup.rs  callbacks.rs  collection.rs  document.rs  general.rs  mod.rs  search.rs  user.rs
backend/src/backup/: archieve.rs  base.rs  list_item.rs  mod.rs  scope.rs  storage.rs
backend/src/configurations/: key_mappings.rs  mod.rs  system.rs  user.rs
backend/src/connectors/: mod.rs  models.rs  relationship_database.rs  requests.rs  responses.rs  text_file.rs  traits.rs  webpage.rs
backend/src/database/: metadata.rs  mod.rs  qdrant.rs  shared.rs  sqlite.rs  traits.rs  utilities.rs
backend/src/database/entity/: collections.rs  document_chunks.rs  documents.rs  mod.rs  prelude.rs  user_resources.rs  users.rs
backend/src/database/filters/: get_collections.rs  get_document_chunks.rs  get_documents.rs  get_users.rs  mod.rs  traits.rs
backend/src/database/traits/: database.rs  identities.rs  metadata.rs  mod.rs
backend/src/databases/: entry.rs  mod.rs
backend/src/databases/database/: database_information.rs  enums.rs  metadata.rs  mod.rs  shared.rs  sqlite.rs  utilities.rs
backend/src/databases/database/entity/: collections.rs  document_chunks.rs  documents.rs  metadata_settings.rs  mod.rs  users.rs
backend/src/databases/database/filters/: get_collections.rs  get_document_chunks.rs  get_documents.rs  get_users.rs  mod.rs
backend/src/databases/database/traits/: blocks.rs  database.rs  identities.rs  metadata.rs  mod.rs  payloads.rs
backend/src/databases/search/: document_search_results.rs  keyword.rs  mod.rs  semantic.rs
backend/src/databases/vector_database/: lancedb.rs  local.rs  mod.rs  models.rs  qdrant.rs  shared.rs  traits.rs
backend/src/documents/: collection_metadata.rs  document_chunk.rs  document_metadata.rs  mod.rs  operations.rs  traits.rs
backend/src/embedders/: README.md  entry.rs  mod.rs  native.rs  other.rs  remote.rs  shared.rs  traits.rs
backend/src/embedders/native_embedder/: README.md  mod.rs  native_embedder.rs
backend/src/entity/: blocks.rs  mod.rs  payloads.rs
backend/src/handlers/: backup.rs  collection.rs  document.rs  general.rs  mod.rs  search.rs  user.rs
backend/src/identities/: mod.rs  storage.rs  user.rs
backend/src/mcp/: mod.rs  requests.rs  responses.rs  search.rs  service.rs
backend/src/model_loader/: downloader.rs
backend/src/models/: block.rs  content_type.rs  document_chunk.rs  mod.rs  payload.rs  queries.rs  requests.rs  responses.rs
backend/src/note/: structures.rs
backend/src/search/: document_search_results.rs  keyword.rs  mod.rs  semantic.rs
backend/src/vector_database/: local.rs  mod.rs  qdrant.rs  shared.rs  traits.rs
crates/gpui-component-assets/: Cargo.toml
crates/gpui-component-macros/: Cargo.toml
crates/gpui_macros/: Cargo.toml
crates/opennote-bootstrap/: Cargo.toml
crates/opennote-bootstrap/src/: lib.rs
crates/opennote-core-logics/: Cargo.toml
crates/opennote-core-logics/src/: block.rs  lib.rs  note.rs  payload.rs  search.rs
crates/opennote-data/: Cargo.toml
crates/opennote-data/crates/migration/: Cargo.toml
crates/opennote-data/crates/migration/src/: m20260322_065952_create_tables.rs
crates/opennote-data/src/: entry.rs  lib.rs
crates/opennote-data/src/database/: enums.rs  metadata.rs  mod.rs  shared.rs  sqlite.rs  utilities.rs
crates/opennote-data/src/database/traits/: blocks.rs  database.rs  metadata.rs  mod.rs  payloads.rs  query.rs
crates/opennote-data/src/search/: keyword.rs  mod.rs  models.rs  semantic.rs
crates/opennote-data/src/vector_database/: lancedb.rs  mod.rs  models.rs  shared.rs  sqlite.rs  traits.rs
crates/opennote-embedder/: Cargo.toml
crates/opennote-embedder/crates/embed/: Cargo.toml
crates/opennote-embedder/crates/embed/src/: lib.rs
crates/opennote-embedder/src/: entry.rs  lib.rs  native.rs  other.rs  remote.rs  shared.rs  traits.rs  vectorization.rs
crates/opennote-models/: Cargo.toml
crates/opennote-models/src/: block.rs  constants.rs  content_type.rs  lib.rs  payload.rs
crates/opennote-models/src/configurations/: key_mappings.rs  language.rs  mod.rs  search.rs  system.rs  user.rs
crates/opennote-models/src/providers/: database.rs  embedder.rs  mod.rs  vector_database.rs
crates/opennote-ui/: Cargo.toml
crates/opennote-ui/src/: logs.rs  main.rs  screens.rs
crates/opennote-ui/src/globals/: actions.rs  assets.rs  bootstrap.rs  helpers.rs  mod.rs  states.rs  traits.rs
crates/opennote-ui/src/globals/schedulers/: mod.rs  (+4 more)
crates/opennote-ui/src/key_mappings/: extend.rs  helpers.rs  key_contexts.rs  mappings.rs  mod.rs  traits.rs
crates/opennote-ui/src/libs/: mod.rs  tree.rs  tree_view_sidebar.rs
crates/opennote-ui/src/screens/: main_window.rs  workspace.rs
crates/opennote-ui/src/views/: mod.rs  search_bar.rs  workspace.rs
crates/opennote-ui/src/widgets/: blocks_tree.rs  command_bar.rs  editor.rs  floating.rs  mod.rs  notifications.rs  search_bar.rs  sidebar.rs  tabs.rs
(+242 files in other folders)
