[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"
members = [
    "crates/opennote-ui",
    "crates/opennote-data",
    "crates/opennote-embedder",
    "crates/opennote-models",
    "crates/opennote-entities",
    "crates/opennote-connectors",
    "crates/opennote-mcp-server",
    "crates/opennote-server",
    "crates/opennote-texts-processing", 
    "crates/opennote-tasks-scheduler", 
    "crates/opennote-bootstrap", 
    "crates/opennote-core-logics",
]

[workspace.dependencies]
# Internal dependencies
opennote-ui = { path = "crates/opennote-ui" }
opennote-data = { path = "crates/opennote-data" }
opennote-server = { path = "crates/opennote-server" }
opennote-mcp-server = { path = "crates/opennote-mcp-server" }
opennote-embedder = { path = "crates/opennote-embedder" }
opennote-models = { path = "crates/opennote-models" }
opennote-entities = { path = "crates/opennote-entities" }
opennote-texts-processing = { path = "crates/opennote-texts-processing" }
opennote-tasks-scheduler = { path = "crates/opennote-tasks-scheduler" }
opennote-bootstrap = { path = "crates/opennote-bootstrap" }
opennote-core-logics = { path = "crates/opennote-core-logics" }

# External dependencies
sea-orm = { version = "2.0.0-rc.32", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["cookies", "gzip", "json", "rustls-tls"] }
schemars = "1.2.0"
chunk = "0.9.2"
dirs = "6.0.0"
log = "0.4.29"
