[package]
name = "notes-backend"
version = "0.1.3"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
env_logger = "0.11.8"
futures = "0.3.31"
html-to-markdown-rs = "2.14.1"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["cookies", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
jieba-rs = "0.8.1"
schemars = "1.2.0"
chunk = "0.9.2"
catsu = "0.1.7"
rmcp = "0.14.0"
rmcp-actix-web = { version = "0.11.0", features = ["authorization-token-passthrough"] }
migration = { path = "./crates/migration" }
sea-orm = { version = "2.0.0-rc.32", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8.6", features = ["tls-rustls", "mysql", "postgres", "sqlite", "runtime-tokio"] }
lancedb = "0.26.2"
serde_arrow = { version = "0.14.0", features = ["arrow-57"] }
arrow-array = "57.3.0"
arrow-schema = { version = "57.3.0", features = ["serde"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
embed_anything = "0.6.7"
