[package]
name = "gpui-component-macros"
description = "Macros for GPUI Component."
version.workspace = true
license = "Apache-2.0"
publish = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
