[package]
name = "gpui_macros"
version.workspace = true
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Macros used by gpui"

[features]
inspector = []

[lib]
path = "src/gpui_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["inspector"] }
