[package]
name = "opennote-core-logics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
opennote-data = { workspace = true }
opennote-models = { workspace = true }
opennote-embedder = { workspace = true }

# External dependencies
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
