[package]
name = "opennote-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
migration = { path = "./crates/migration" }

# External dependencies
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
html-to-markdown-rs = "2.14.1"
rmcp = "0.14.0"
rmcp-actix-web = { version = "0.11.0", features = ["authorization-token-passthrough"] }
sqlx = { version = "0.8.6", features = ["tls-rustls", "mysql", "postgres", "sqlite", "runtime-tokio"] }
lancedb = "0.26.2"
serde_arrow = { version = "0.14.0", features = ["arrow-57"] }
arrow-array = "57.3.0"
arrow-schema = { version = "57.3.0", features = ["serde"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }

# Internal dependencies
opennote-embedder = { workspace = true }
opennote-models = { workspace = true }
opennote-entities = { workspace = true }
