[package]
name = "opennote-embedder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
opennote-models = { workspace = true }

# External dependencies
catsu = "0.1.7"
embed = { path = "crates/embed" }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
