[package]
name = "opennote-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
opennote-entities = { workspace = true }

# External dependencies
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
