[package]
name = "opennote-ui"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
opennote-bootstrap = { workspace = true }
opennote-models = { workspace = true }

# External dependencies
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

gpui = "0.2.2"
gpui-component = "0.5.1"
