[package]
name = "local_embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"
embed_anything = "=0.6.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
